--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="maindiv">
       <h1>Creme Brulee</h1>
       <hr>
-      <img src="http://foodnetwork.sndimg.com/content/dam/images/food/fullset/2011/7/26/1/EA0914_creme-brulee_s4x3.jpg.rend.sni12col.landscape.jpeg" class="image"/>
+      <img src="http://foodnetwork.sndimg.com/content/dam/images/food/fullset/2011/7/26/1/EA0914_creme-brulee_s4x3.jpg.rend.sni12col.landscape.jpeg" alt="Creeme Brulee" class="image"/>
       <div>
         <h3>Total Time: 3 hr 30 min</h3>
         <dl>
@@ -23,7 +23,7 @@
         </dl>
         <hr>
         <a href="http://www.foodnetwork.com/recipes/alton-brown/creme-brulee-recipe.html?oc=linkback">Read more ...</a>
-      <div>
+      </div>
     </div>    
   </body> 
 </html>
